Ajustando data e finalizando desafio da aula 2.